--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -17,7 +17,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_margin="16dp"
+        android:layout_marginBottom="70dp"
+        android:layout_marginRight="16dp"
         android:contentDescription="@string/add_product"
         app:srcCompat="@drawable/ic_baseline_add_white_24"
         app:layout_constraintBottom_toBottomOf="parent"
