--- a/app/src/main/res/layout/fragment_create_product.xml
+++ b/app/src/main/res/layout/fragment_create_product.xml
@@ -136,7 +136,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:hint="@string/start_price"
+                android:hint="@string/start_price_prediction"
                 app:layout_constraintTop_toBottomOf="@id/costTextField">
 
 
@@ -154,7 +154,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:hint="@string/end_price"
+                android:hint="@string/end_price_prediction"
                 app:layout_constraintTop_toBottomOf="@id/startPriceTextField">
 
 
@@ -166,28 +166,43 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                android:id="@+id/uploadImageTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/upload_image"
+                app:layout_constraintTop_toBottomOf="@id/endPriceTextField"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textAppearance="@style/TextAppearance.Hargain.Body1"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/neutral_80"
+                />
+
+            <TextView
+                android:id="@+id/imageErrorLabel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/image_is_required"
+                app:layout_constraintTop_toBottomOf="@id/uploadImageTextView"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+                android:textColor="@color/red"
+                android:textStyle="italic"
+                android:visibility="invisible"
+                />
+
             <ImageView
                 android:id="@+id/previewImageView"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginEnd="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/endPriceTextField"
+                app:layout_constraintTop_toBottomOf="@+id/uploadImageTextView"
                 app:srcCompat="@drawable/ic_round_photo_library_24" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/edit_product"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/previewImageView" />
 
             <ImageButton
                 android:id="@+id/cameraButton"
@@ -223,9 +238,9 @@
                 android:id="@+id/saveButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="30dp"
                 android:text="@string/save"
-                app:layout_constraintTop_toBottomOf="@id/endPriceTextField" />
+                app:layout_constraintTop_toBottomOf="@id/previewImageView" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
