--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,14 +12,11 @@
         android:id="@+id/imageViewRegister"
         android:layout_width="match_parent"
         android:layout_height="160dp"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="30dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bangkit_logo" />
+        app:srcCompat="@drawable/logo_image" />
 
     <TextView
         android:id="@+id/passwordTV"
@@ -35,6 +32,7 @@
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
         android:text="@string/email"
         android:textAppearance="@android:style/TextAppearance.Material"
         app:layout_constraintStart_toStartOf="@+id/imageViewRegister"
