--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -44,7 +44,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="70dp"
             android:contentDescription="@string/add_product"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
