--- a/app/src/main/res/layout/fragment_detail_product.xml
+++ b/app/src/main/res/layout/fragment_detail_product.xml
@@ -69,9 +69,9 @@
         android:id="@+id/layoutDescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="@id/price"
-        app:layout_constraintTop_toTopOf="@id/price">
+        app:layout_constraintTop_toBottomOf="@id/price">
 
         <TextView
             android:id="@+id/textKategori"
@@ -153,6 +153,10 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+
+
+
     <Button
         android:id="@+id/buttonEdit"
         android:layout_width="wrap_content"
@@ -177,5 +181,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutPrediction"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="@+id/layoutDescription"
+        app:layout_constraintTop_toBottomOf="@+id/layoutDescription">
+        <TextView
+            android:id="@+id/sellingPriceTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Selling Price"
+            app:layout_constraintStart_toStartOf="@id/layoutPrediction"
+            app:layout_constraintTop_toTopOf="@id/layoutPrediction"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
