--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -49,5 +49,16 @@
         <argument
             android:name="productId"
             app:argType="string" />
+        <action
+            android:id="@+id/action_detailProductFragment_to_updateProductFragment"
+            app:destination="@id/updateProductFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/updateProductFragment"
+        android:name="com.bangkit.hargain.presentation.main.product.edit.UpdateProductFragment"
+        android:label="@string/update_product" >
+        <argument
+            android:name="product"
+            app:argType="com.bangkit.hargain.domain.product.entity.ProductEntity" />
     </fragment>
 </navigation>
