feat: send category args from main to search fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -31,6 +31,9 @@
             android:name="categoryId"
             app:argType="string"
             android:defaultValue=""/>
+        <argument android:name="categoryName"
+            app:argType="string"
+            android:defaultValue=""/>
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
