--- a/app/src/main/res/layout/card_category.xml
+++ b/app/src/main/res/layout/card_category.xml
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:elevation="5dp"
     app:cardCornerRadius="5dp"
-    android:layout_margin="5dp"
-    >
+    android:layout_margin="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
